# SolarThermal

./: .gitignore  CONTRIBUTING.md  README.md  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  mypy.yml  pylint.yml  yamllint.yml
src/solar_thermal/: __init__.py  __main__.py
src/solar_thermal/collector/: adhesive.py  bond.py  eva.py  glass.py  tedlar.py
src/solar_thermal/scripts/: solar_thermal.py
