[metadata]
name = solar-thermal
version = 0.0.1
author = Ben Winchester
author_email = = benedict.winchester@gmail.com
description = A technical 3D model of a series of solar-thermal collectors.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/phil-sandwell/CLOVER
project_urls =
    Bug Tracker = https://github.com/BenWinchester/SolarThermal/issues
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    numpy >=1.20.1
    pandas >=1.2.3
    PyYAML >=5.4.1
    requests >=2.25.1
    seaborn >=0.11.1
    scikit-learn >= 1.0.2
    scipy >=1.6.2
    tqdm >=4.59.0
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    solar-thermal = solar_thermal.scripts.solar_thermal:main

[options.packages.find]
where = src

